# automaticPec

./: .gitignore  Makefile  config.toml  pyproject.toml
devtools/: lint.py
src/: send.py  smoke.py  test_limits.py
